--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,15 +1,14 @@
 .header {
     height: 70px;
-    width: 88.5%;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     margin-bottom: 25px;
-    margin-left: 70px;
   
     .logo-container {
       height: 100%;
       width: 70px;
-      padding: 25px;
+      padding: 12.5px 0 0 0;
     }
   
     .options {
